# flip7tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  plan.md
.github/workflows/: ci.yml  docker.yml
archive/: 2026-06-27_flip7bot-migration-rust-teloxide-telegram-go-mattermost.md
examples/: gen_elo_golden.rs
migrations/: 003_game_winners.sql
mmbot/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  SMOKE_TEST.md  docker-compose.yml  go.mod  go.sum
mmbot/cmd/mmbot/: main.go  main_test.go
mmbot/internal/config/: config.go  config_test.go
mmbot/internal/db/: db.go  doc.go  migrate.go  migrate_test.go  models.go  queries.go  queries_test.go
mmbot/internal/game/: doc.go  game.go  game_test.go  load.go  load_test.go
mmbot/internal/menu/: doc.go  menu.go  menu_test.go
mmbot/internal/mm/: client.go  client_test.go  doc.go  poster.go  poster_test.go  sign.go  sign_test.go
mmbot/internal/nav/: doc.go  nav.go  nav_test.go  router.go  router_test.go
mmbot/internal/newgame/: doc.go  newgame.go  newgame_test.go
mmbot/internal/players/: doc.go  players.go  players_test.go
mmbot/internal/rating/: delta.go  doc.go  golden_test.go  rating.go  rating_test.go
mmbot/scripts/: register.sh
src/: config.rs  main.rs
src/db/: mod.rs  models.rs  queries.rs
src/handlers/: game.rs  load_game.rs  menu.rs  mod.rs  new_game.rs  players.rs  statistics.rs
src/keyboards/: game.rs  menu.rs  mod.rs  new_game.rs  players.rs
src/utils/: mod.rs  rating.rs  scoreboard.rs
(+16 files in other folders)
